--- a/main_page.css
+++ b/main_page.css
@@ -11,10 +11,10 @@
 }
 .page-header {
     
-	background-color:grey;
+	background-color:#999966;
 	text-align:center;
-	color:white;
-	padding:10px;
+	color:black;
+	
 	font-size:20;
 	font-style:italic;
 	
